idf_component_register(
                        SRCS 
                                "main.c"
                        INCLUDE_DIRS 
                                "." 
                                "../components/driver_nvs"
                        REQUIRES 
                                driver_nvs 
                        PRIV_REQUIRES 
                                spi_flash 
                                esp_wifi 
                                nvs_flash 
                                esp_http_server
                                driver 
                                esp_driver_gpio
)