idf_component_register(
                        SRCS 
                                "main.c"
                        INCLUDE_DIRS 
                                "." 
                                "../components/driver_nvs"
                                "../components/driver_wifi"
                        REQUIRES 
                                driver_nvs 
                                driver_wifi
                        PRIV_REQUIRES 
                                spi_flash 
                                esp_wifi 
                                nvs_flash 
                                driver 
                                esp_driver_gpio
)